--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,18 +1,21 @@
 [project]
+project_name = state-farm-detection
+run_name =
 raw_data_path = ../../../data/state-farm-detection
 validate_by_driver = False
 n_tfrec_chunks = 20
 
 [model]
 model_url = https://tfhub.dev/tensorflow/efficientnet/b0/feature-vector/1
-trainable = True
 img_size = 224
-n_epochs = 1
+fc_size = 2048
+n_epochs = 200
 batch_size = 32
-initial_learning_rate = 0.01
+initial_learning_rate = 0.001
 first_decay_steps = 1000
-use_adamw = True
+use_adamw = False
+use_mixup = False
 use_swa = False
 label_smoothing = 0.0
-n_train_splits = 2
-n_test_splits = 2
+n_train_splits = 5
+n_test_splits = 5
