add pseudo labeling

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -2,6 +2,7 @@
 project_name = state-farm-detection
 run_name =
 raw_data_path = ../../../data/state-farm-detection
+pseudo_labeled_data_path = ../../../data/state-farm-detection/pseudo_label
 validate_by_driver = False
 n_tfrec_chunks = 20
 
@@ -19,3 +20,4 @@ use_swa = False
 label_smoothing = 0.0
 n_train_splits = 5
 n_test_splits = 5
+pseudo_label_thr = 0.9
