--- a/conf/config.ini
+++ b/conf/config.ini
@@ -2,7 +2,7 @@
 project_name = state-farm-detection
 run_name =
 raw_data_path = ../../../data/state-farm-detection
-pseudo_labeled_data_path = ../../../data/state-farm-detection/pseudo_label
+plabeled_data_path = ../../../data/state-farm-detection/pseudo_label
 validate_by_driver = False
 n_tfrec_chunks = 20
 
