--- a/conf/config.ini
+++ b/conf/config.ini
@@ -10,12 +10,12 @@ model_url = https://tfhub.dev/tensorflow/efficientnet/b0/feature-vector/1
 img_size = 224
 fc_size = 2048
 n_epochs = 500
-batch_size = 8
-initial_learning_rate = 0.0001
+batch_size = 32
+initial_learning_rate = 0.001
 first_decay_steps = 1000
 use_adamw = False
 use_swa = False
-use_mixup = False
+use_mixup = True
 label_smoothing = 0.0
 pseudo_label_thr = 0.9
 n_train_splits = 5
