--- a/conf/config.ini
+++ b/conf/config.ini
@@ -20,3 +20,9 @@ label_smoothing = 0.0
 pseudo_label_thr = 0.9
 n_train_splits = 5
 n_test_splits = 3
+
+[aws]
+region = ap-northeast-2
+s3_bucket = 
+s3_prefix = state-farm-detection
+iam_role = AmazonSageMaker-ExecutionRole-20210114T163887
